assets/src/components/checkboxControl/style.scss
/**
 * Checkbox styles.
 */

@import '../../shared/scss/muriel-component';

.muriel-checkbox {
	display: block;
	position: relative;
	input[type="checkbox"] {
		width: 22px;
		height: 22px;
		border: 2px solid $muriel-gray-500;
		border-radius: 3px;

		&:checked {
			background-color: $muriel-hot-pink-500;
			border-color: $muriel-hot-pink-500;

			&:before {
				font-size: 30px;
				margin-left: -7px;
				margin-top: -4px;
				color: $muriel-white;
			}
		}
	}

	label.components-checkbox-control__label {
		margin-left: 2em;
		font-size: 16px;
	}
}

